# atr

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
contracts/: AtrRouter.sol
crates/atr-base/: Cargo.toml
crates/atr-base/src/: executor.rs  gas_estimator.rs  lib.rs  nonce_manager.rs
crates/atr-core/: Cargo.toml
crates/atr-core/src/: chain.rs  error.rs  executor.rs  intent.rs  lib.rs  transaction.rs
crates/atr-core/tests/: core_tests.rs
crates/atr-crosschain/: Cargo.toml
crates/atr-crosschain/src/: lib.rs
crates/atr-crosschain/tests/: crosschain_tests.rs
crates/atr-observer/: Cargo.toml
crates/atr-observer/src/: events.rs  lib.rs  metrics.rs  storage.rs  tracker.rs
crates/atr-retry/: Cargo.toml
crates/atr-retry/src/: lib.rs
crates/atr-retry/tests/: retry_tests.rs
crates/atr-sdk/: Cargo.toml
crates/atr-sdk/src/: lib.rs
crates/atr-server/: Cargo.toml
crates/atr-server/src/: auth.rs  handlers.rs  lib.rs  main.rs  poller.rs  rate_limit.rs  routes.rs  state.rs
crates/atr-server/tests/: rate_limit_tests.rs
crates/atr-simulator/: Cargo.toml
crates/atr-simulator/src/: lib.rs
crates/atr-solana/: Cargo.toml
crates/atr-solana/src/: confirmation.rs  executor.rs  fee_estimator.rs  lib.rs
marketing/: blog_post.md  twitter_thread.md
scripts/: demo_agent.py  deploy_shape.py
