[package]
name = "atr-base"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
atr-core = { path = "../atr-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
alloy = { workspace = true }
alloy-primitives = { workspace = true }
alloy-rpc-types = { workspace = true }
alloy-provider = { workspace = true }
alloy-transport = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
