[package]
name = "atr-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
alloy-primitives = { workspace = true }
solana-sdk = { workspace = true }
async-trait = { workspace = true }
