[package]
name = "atr-crosschain"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
atr-core = { path = "../atr-core" }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
