[package]
name = "atr-observer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
atr-core = { path = "../atr-core" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
prometheus-client = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
