[package]
name = "atr-simulator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
solana = ["atr-solana"]

[dependencies]
atr-core = { path = "../atr-core" }
atr-solana = { path = "../atr-solana", optional = true }
atr-base = { path = "../atr-base" }
tokio = { workspace = true }
tracing = { workspace = true }
